QStyleSheetStyle: Use qss attributes for CE_ComboBoxLabel

CE_ComboBoxLabel did not apply any attributes if the render rule has no
box. Remove the check.

Fixes: QTBUG-131761
Change-Id: I603ae6c459303f0d3a5bcc9572f12acca32bc575
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit a77a7c157d5cdcc88bf0a02caed2aa5ff8850d06)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>